Fix aggregation on PARTITION BY cols
When a column is the PARTITION BY clause of a table we cannot use
doc values aggregators, otherwise the agg function will always return
`NULL` since no values are collected for those columns. Add checks to
`getDocValueAggregator()` to return `null` if the column has `PARTITION`
granularity.

Fixes: #17980
(cherry picked from commit bb4205db375cc17694818cbb88f03dc039a805ce)